--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@anon-aadhaar/core": "^2.1.1",
     "@anon-aadhaar/react": "^2.1.1",
     "@heroicons/react": "^2.0.18",
+    "@supabase/supabase-js": "^2.44.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tanstack/react-query": "^5.37.1",
     "@web3modal/wagmi": "^4.2.4-cn-webgl.2",
